:rotating_light: Se crean los comentarios para agregar la funcionalidad de JavaDocs, adicional se generan los test de la clase Game con una covertura del 100% del coverage, pendiente agregar los tests para las nuevas clases