@@ -60,10 +60,67 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+
+                <executions>
+                    <!-- Evita el aggregate -->
+                    <execution>
+                        <id>skip-aggregate</id>
+                        <goals><goal>aggregate</goal></goals>
+                        <configuration><skip>true</skip></configuration>
+                    </execution>
+
+                    <!-- Javadoc solo del modelo -->
+                    <execution>
+                        <id>model-javadoc</id>
+                        <phase>verify</phase>
+                        <goals><goal>javadoc</goal></goals>
+
+                        <configuration>
+                            <!-- Ruta absoluta a los .java -->
+                            <sourcepath>${project.basedir}/src/main/java</sourcepath>
+
+                            <!-- Solo compilar el paquete model -->
+                            <includes>
+                                <include>dev/poli/students/game/model/**</include>
+                            </includes>
+
+                            <!-- Necesario por los espacios en “Juego escalera” -->
+                            <useStandardDocletOptions>true</useStandardDocletOptions>
+
+                            <!-- Opciones comunes -->
+                            <source>11</source>
+                            <encoding>UTF-8</encoding>
+                            <docencoding>UTF-8</docencoding>
+                            <charset>UTF-8</charset>
+                            <failOnError>false</failOnError>
+
+                            <!-- Si usas clases JavaFX dentro del modelo -->
+                            <additionalJOptions>
+                                <additionalJOption>
+                                    --add-modules javafx.controls,javafx.graphics
+                                </additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
